Glitch layout fixes
Glitch's layout was little bit messed up. Fixed right menu positioning by adding margin to top. Also added right margin to the buttons at the top of screen if @media min-width: 890px and max-width: 1174px.

--- a/chrome/styles/glitch.css
+++ b/chrome/styles/glitch.css
@@ -1,7 +1,15 @@
-body.air #mastodon .columns-area__panels__main {
+body.air.flavour-glitch #mastodon .columns-area__panels__main {
     max-width: 600px !important;
 }
 
-body.air #mastodon button.icon-button.active svg.icon-retweet {
+body.air.flavour-glitch #mastodon button.icon-button.active svg.icon-retweet {
   color: #00c277;
+}
+
+body.air.flavour-glitch #mastodon .navigation-panel {
+  margin-top: 2em;
+}
+
+body.air.flavour-glitch #mastodon .ui__header__links {
+  margin-right: 140px;
 }
